--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@tiptap/starter-kit": "^2.12.0",
     "@tiptap/suggestion": "^2.12.0",
     "@types/lodash": "^4.17.17",
+    "@types/uuid": "^10.0.0",
     "@uiw/react-md-editor": "^4.0.7",
     "ai": "^4.3.16",
     "class-variance-authority": "^0.7.1",
@@ -64,6 +65,7 @@
     "marked": "^15.0.12",
     "next": "15.3.2",
     "openai": "^4.103.0",
+    "pdf-parse": "^1.1.1",
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
@@ -74,8 +76,10 @@
     "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
     "sonner": "^2.0.3",
+    "swr": "^2.3.3",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0",
     "zod": "^3.25.41"
   },
   "devDependencies": {
@@ -83,6 +87,7 @@
     "@tailwindcss/postcss": "^4.1.8",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^20",
+    "@types/pdf-parse": "^1.1.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
