--- a/package.json
+++ b/package.json
@@ -51,9 +51,10 @@
     "@tiptap/starter-kit": "^2.12.0",
     "@tiptap/suggestion": "^2.12.0",
     "@types/lodash": "^4.17.17",
-    "@types/uuid": "^10.0.0",
+    "@types/markdown-it": "^14.1.2",
     "@uiw/react-md-editor": "^4.0.7",
     "ai": "^4.3.16",
+    "citation-js": "^0.7.19",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -63,9 +64,11 @@
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.511.0",
+    "markdown-it": "^14.1.0",
     "marked": "^15.0.12",
     "next": "15.3.2",
     "openai": "^4.103.0",
+    "parse-author": "^2.0.0",
     "pdf-parse": "^1.1.1",
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
@@ -91,6 +94,7 @@
     "@types/pdf-parse": "^1.1.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
