--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "test": "vitest",
     "test:ui": "vitest --ui",
-    "test:coverage": "vitest --coverage"
+    "test:coverage": "vitest --coverage",
+    "types:generate": "supabase gen types typescript --linked > types/supabase.ts"
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.3.22",
@@ -53,7 +54,6 @@
     "@tiptap/react": "^2.12.0",
     "@tiptap/starter-kit": "^2.12.0",
     "@tiptap/suggestion": "^2.12.0",
-    "@types/dompurify": "^3.2.0",
     "@types/lodash": "^4.17.17",
     "@types/markdown-it": "^14.1.2",
     "@uiw/react-md-editor": "^4.0.7",
@@ -100,13 +100,16 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/uuid": "^10.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.33.1",
     "@vitest/coverage-v8": "^3.2.1",
     "@vitest/ui": "^3.2.1",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "postcss": "^8.5.4",
+    "supabase": "^2.24.3",
     "tailwindcss": "^4.1.8",
+    "ts-prune": "^0.10.3",
     "tw-animate-css": "^1.3.2",
     "typescript": "^5",
     "vitest": "^3.2.1"
