feat: added prompt shema and loader

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@types/markdown-it": "^14.1.2",
     "@uiw/react-md-editor": "^4.0.7",
     "ai": "^4.3.16",
+    "ajv": "^8.17.1",
     "citation-js": "^0.7.19",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -106,6 +107,7 @@
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
+    "jsdom": "^26.1.0",
     "postcss": "^8.5.4",
     "supabase": "^2.24.3",
     "tailwindcss": "^4.1.8",
