--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@tiptap/suggestion": "^2.12.0",
     "@types/lodash": "^4.17.17",
     "@types/markdown-it": "^14.1.2",
+    "@types/mustache": "^4.2.6",
     "@uiw/react-md-editor": "^4.0.7",
     "ai": "^4.3.16",
     "ajv": "^8.17.1",
@@ -72,6 +73,7 @@
     "lucide-react": "^0.511.0",
     "markdown-it": "^14.1.0",
     "marked": "^15.0.12",
+    "mustache": "^4.2.0",
     "next": "15.3.2",
     "openai": "^4.103.0",
     "parse-author": "^2.0.0",
