--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "country-list": "^2.3.0",
     "date-fns": "^3.6.0",
     "dompurify": "^3.2.6",
     "highlight.js": "^11.11.1",
@@ -91,12 +92,14 @@
     "swr": "^2.3.3",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "tldjs": "^2.3.1",
     "uuid": "^11.1.0",
-    "zod": "^3.25.41"
+    "zod": "^3.25.62"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.8",
+    "@types/country-list": "^2.1.4",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^20",
     "@types/pdf-parse": "^1.1.5",
