--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "dompurify": "^3.2.6",
     "highlight.js": "^11.11.1",
     "katex": "^0.16.22",
+    "langdetect": "^0.2.1",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.511.0",
@@ -88,6 +89,7 @@
     "rehype-katex": "^7.0.1",
     "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
+    "server-only": "^0.0.1",
     "sonner": "^2.0.3",
     "swr": "^2.3.3",
     "tailwind-merge": "^3.3.0",
