--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest --coverage",
-    "types:generate": "supabase gen types typescript --linked > types/supabase.ts"
+    "types:generate": "supabase gen types typescript --linked > types/supabase.ts",
+    "postinstall": "cp node_modules/@dqbd/tiktoken/tiktoken_bg.wasm public/ 2>/dev/null || true"
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.3.22",
@@ -39,10 +40,11 @@
     "@supabase/supabase-js": "^2.49.8",
     "@tanstack/react-query": "^5.79.0",
     "@tanstack/react-query-devtools": "^5.79.0",
-    "@tiptap/extension-character-count": "^2.12.0",
+    "@tiptap/core": "^2.22.0",
+    "@tiptap/extension-character-count": "^2.22.0",
     "@tiptap/extension-image": "^2.12.0",
     "@tiptap/extension-link": "^2.12.0",
-    "@tiptap/extension-placeholder": "^2.12.0",
+    "@tiptap/extension-placeholder": "^2.22.0",
     "@tiptap/extension-table": "^2.12.0",
     "@tiptap/extension-table-cell": "^2.12.0",
     "@tiptap/extension-table-header": "^2.12.0",
@@ -51,9 +53,9 @@
     "@tiptap/extension-task-list": "^2.12.0",
     "@tiptap/extension-underline": "^2.12.0",
     "@tiptap/pm": "^2.12.0",
-    "@tiptap/react": "^2.12.0",
-    "@tiptap/starter-kit": "^2.12.0",
-    "@tiptap/suggestion": "^2.12.0",
+    "@tiptap/react": "^2.22.0",
+    "@tiptap/starter-kit": "^2.22.0",
+    "@tiptap/suggestion": "^2.22.0",
     "@types/lodash": "^4.17.17",
     "@types/markdown-it": "^14.1.2",
     "@types/mustache": "^4.2.6",
@@ -67,6 +69,8 @@
     "country-list": "^2.3.0",
     "date-fns": "^3.6.0",
     "dompurify": "^3.2.6",
+    "fast-xml-parser": "^5.2.5",
+    "form-data": "^4.0.0",
     "highlight.js": "^11.11.1",
     "katex": "^0.16.22",
     "langdetect": "^0.2.1",
@@ -76,14 +80,17 @@
     "markdown-it": "^14.1.0",
     "marked": "^15.0.12",
     "mustache": "^4.2.0",
+    "natural": "^8.1.0",
     "next": "15.3.2",
     "openai": "^4.103.0",
+    "p-limit": "^6.2.0",
     "parse-author": "^2.0.0",
     "pdf-parse": "^1.1.1",
     "react": "^19.0.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
+    "react-hot-toast": "^2.5.2",
     "react-markdown": "^10.1.0",
     "rehype-highlight": "^7.0.2",
     "rehype-katex": "^7.0.1",
@@ -94,7 +101,10 @@
     "swr": "^2.3.3",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "tiktoken": "^1.0.21",
+    "tippy.js": "^6.3.7",
     "tldjs": "^2.3.1",
+    "ulid": "^3.0.1",
     "uuid": "^11.1.0",
     "zod": "^3.25.62"
   },
@@ -102,6 +112,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.8",
     "@types/country-list": "^2.1.4",
+    "@types/js-yaml": "^4.0.9",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^20",
     "@types/pdf-parse": "^1.1.5",
