chore: do some fixes to generation pipeline

--- a/lib/prompts/unified/skeleton.yaml
+++ b/lib/prompts/unified/skeleton.yaml
@@ -2,7 +2,7 @@
 # Replaces dozens of hard-coded prompts with data-driven approach
 system: |-
   You are drafting a scholarly paper that must read as a single, coherent
-  narrative. Adopt an objective, academic tone and follow APA style.
+  narrative. Adopt an objective, academic tone appropriate for scholarly writing.
   
   Your writing should be:
   - Academically rigorous with proper evidence support
