--- a/package.json
+++ b/package.json
@@ -18,6 +18,12 @@
     "@ai-sdk/openai": "^1.3.22",
     "@citation-js/core": "^0.7.18",
     "@citation-js/plugin-csl": "^0.7.18",
+    "@codemirror/basic-setup": "^0.20.0",
+    "@codemirror/commands": "^6.8.1",
+    "@codemirror/lang-markdown": "^6.3.4",
+    "@codemirror/state": "^6.5.2",
+    "@codemirror/theme-one-dark": "^6.1.3",
+    "@codemirror/view": "^6.38.1",
     "@dqbd/tiktoken": "^1.0.21",
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -67,6 +73,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "codemirror": "^6.0.2",
     "country-list": "^2.3.0",
     "date-fns": "^3.6.0",
     "dompurify": "^3.2.6",
@@ -82,7 +89,7 @@
     "marked": "^15.0.12",
     "mustache": "^4.2.0",
     "natural": "^8.1.0",
-    "next": "15.3.2",
+    "next": "^15.4.6",
     "openai": "^4.103.0",
     "p-limit": "^6.2.0",
     "parse-author": "^2.0.0",
