--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "p-limit": "^6.2.0",
     "parse-author": "^2.0.0",
     "pdf-parse": "^1.1.1",
+    "pdf2pic": "^3.2.0",
     "pino": "^9.7.0",
     "quick-lru": "^7.0.1",
     "react": "^19.0.0",
@@ -93,6 +94,7 @@
     "swr": "^2.3.3",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "tesseract.js": "^6.0.1",
     "tiktoken": "^1.0.21",
     "tldjs": "^2.3.1",
     "ulid": "^3.0.1",
