--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
     "tesseract.js": "^6.0.1",
+    "tesseract.js-core": "^6.0.0",
     "tiktoken": "^1.0.21",
     "tldjs": "^2.3.1",
     "ulid": "^3.0.1",
