--- a/package.json
+++ b/package.json
@@ -18,12 +18,6 @@
     "@ai-sdk/openai": "^1.3.22",
     "@citation-js/core": "^0.7.18",
     "@citation-js/plugin-csl": "^0.7.18",
-    "@codemirror/basic-setup": "^0.20.0",
-    "@codemirror/commands": "^6.8.1",
-    "@codemirror/lang-markdown": "^6.3.4",
-    "@codemirror/state": "^6.5.2",
-    "@codemirror/theme-one-dark": "^6.1.3",
-    "@codemirror/view": "^6.38.1",
     "@dqbd/tiktoken": "^1.0.21",
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -47,6 +41,25 @@
     "@supabase/supabase-js": "^2.49.8",
     "@tanstack/react-query": "^5.79.0",
     "@tanstack/react-query-devtools": "^5.79.0",
+    "@tiptap/extension-bubble-menu": "^3.14.0",
+    "@tiptap/extension-code-block-lowlight": "^3.14.0",
+    "@tiptap/extension-color": "^3.14.0",
+    "@tiptap/extension-highlight": "^3.14.0",
+    "@tiptap/extension-horizontal-rule": "^3.14.0",
+    "@tiptap/extension-image": "^3.14.0",
+    "@tiptap/extension-link": "^3.14.0",
+    "@tiptap/extension-placeholder": "^3.14.0",
+    "@tiptap/extension-table": "^3.14.0",
+    "@tiptap/extension-table-cell": "^3.14.0",
+    "@tiptap/extension-table-header": "^3.14.0",
+    "@tiptap/extension-table-row": "^3.14.0",
+    "@tiptap/extension-text-align": "^3.14.0",
+    "@tiptap/extension-text-style": "^3.14.0",
+    "@tiptap/extension-typography": "^3.14.0",
+    "@tiptap/extension-underline": "^3.14.0",
+    "@tiptap/pm": "^3.14.0",
+    "@tiptap/react": "^3.14.0",
+    "@tiptap/starter-kit": "^3.14.0",
     "@types/lodash": "^4.17.17",
     "@types/markdown-it": "^14.1.2",
     "@types/mustache": "^4.2.6",
@@ -56,17 +69,19 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
-    "codemirror": "^6.0.2",
     "country-list": "^2.3.0",
     "date-fns": "^3.6.0",
+    "docx": "^9.5.1",
     "dompurify": "^3.2.6",
     "fast-xml-parser": "^5.2.5",
     "form-data": "^4.0.0",
     "highlight.js": "^11.11.1",
+    "html-to-docx": "^1.8.0",
     "katex": "^0.16.22",
     "langdetect": "^0.2.1",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
+    "lowlight": "^3.3.0",
     "lucide-react": "^0.511.0",
     "markdown-it": "^14.1.0",
     "marked": "^15.0.12",
@@ -117,6 +132,7 @@
     "@vitest/coverage-v8": "^3.2.1",
     "@vitest/ui": "^3.2.1",
     "autoprefixer": "^10.4.21",
+    "dotenv": "^17.2.3",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "jsdom": "^26.1.0",
