--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "@tiptap/extension-table-cell": "^3.14.0",
     "@tiptap/extension-table-header": "^3.14.0",
     "@tiptap/extension-table-row": "^3.14.0",
+    "@tiptap/extension-task-item": "^3.15.3",
+    "@tiptap/extension-task-list": "^3.15.3",
     "@tiptap/extension-text-align": "^3.14.0",
     "@tiptap/extension-text-style": "^3.14.0",
     "@tiptap/extension-typography": "^3.14.0",
@@ -61,6 +63,7 @@
     "@tiptap/pm": "^3.14.0",
     "@tiptap/react": "^3.14.0",
     "@tiptap/starter-kit": "^3.14.0",
+    "@tiptap/suggestion": "^3.15.3",
     "@types/lodash": "^4.17.17",
     "@types/markdown-it": "^14.1.2",
     "@types/mustache": "^4.2.6",
@@ -113,6 +116,7 @@
     "tesseract.js": "^6.0.1",
     "tesseract.js-core": "^6.0.0",
     "tiktoken": "^1.0.21",
+    "tippy.js": "^6.3.7",
     "tldjs": "^2.3.1",
     "ulid": "^3.0.1",
     "uuid": "^11.1.0",
