--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "html-to-docx": "^1.8.0",
     "katex": "^0.16.22",
     "langdetect": "^0.2.1",
+    "lightningcss": "^1.30.2",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "lowlight": "^3.3.0",
