--- a/package.json
+++ b/package.json
@@ -127,6 +127,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.8",
+    "@testing-library/react": "^16.3.1",
     "@types/country-list": "^2.1.4",
     "@types/js-yaml": "^4.0.9",
     "@types/lodash-es": "^4.17.12",
