--- a/lib/prompts/complete/system.yaml
+++ b/lib/prompts/complete/system.yaml
@@ -92,8 +92,15 @@ system: |-
   
   ## Critical Rules
   - **Maximum 1-2 sentences** - completions must be concise
-  - **MUST cite sources** using [@paper_id] format when making claims
+  - **MUST cite sources** when making claims from the source material
   - **ONLY claims supported by source material** - never fabricate
   - **Flow naturally** from the preceding text
   - **Connect grammatically** to following text if present
   - **Use exact Paper IDs** from the Available Papers list
+  
+  ## Citation Format (IMPORTANT)
+  - Use [@paper_id] format for EACH citation
+  - Place citations AFTER the claim they support
+  - For multiple sources, use SEPARATE brackets: [@id1] [@id2]
+  - NEVER group citations with semicolons like [@id1; @id2] - this breaks formatting
+  - Example: "Studies show X [@abc123] and Y [@def456]."
