--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "postinstall": "cp node_modules/@dqbd/tiktoken/tiktoken_bg.wasm public/ 2>/dev/null || true"
   },
   "dependencies": {
-    "@ai-sdk/openai": "^1.3.22",
+    "@ai-sdk/openai": "^3.0.12",
+    "@ai-sdk/react": "^3.0.41",
     "@citation-js/core": "^0.7.18",
     "@citation-js/plugin-csl": "^0.7.18",
     "@dqbd/tiktoken": "^1.0.21",
@@ -67,7 +68,7 @@
     "@types/lodash": "^4.17.17",
     "@types/markdown-it": "^14.1.2",
     "@types/mustache": "^4.2.6",
-    "ai": "^4.3.16",
+    "ai": "^6.0.39",
     "ajv": "^8.17.1",
     "citation-js": "^0.7.19",
     "class-variance-authority": "^0.7.1",
@@ -87,6 +88,7 @@
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "lowlight": "^3.3.0",
+    "lru-cache": "^11.2.4",
     "lucide-react": "^0.511.0",
     "markdown-it": "^14.1.0",
     "mustache": "^4.2.0",
@@ -101,7 +103,7 @@
     "quick-lru": "^7.0.1",
     "react": "^19.0.0",
     "react-day-picker": "^9.7.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.2.3",
     "react-hook-form": "^7.56.4",
     "react-markdown": "^10.1.0",
     "rehype-highlight": "^7.0.2",
